<resources>
    <string name="app_name">EnjoyEating</string>
    <string name="enjoy_eating">Enjoy Eating</string>
    <string name="registrarse">Registrarse</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="registro">Registro</string>
    <string name="correo">correo</string>
    <string name="register_error">Error al conectarse al servidor</string>
    <string name="error_register">Error al registrar el usuario</string>
    <string name="register_success">Registro exitoso</string>
    <string name="register_exist">El usuario ya se encuentra registrado</string>
    <string name="reister_no">Error al registrar usuario</string>
    <string name="error_login">Usuario o contraseña incorrecta, por favor intenta de nuevo</string>
    <string name="login_error">El usuario no se encuentra registrado</string>
    <string name="error">Error al conectarse con el servidor</string>
    <string name="vacio">Los campos de usuario y/o contraseña estan vacios. Por favor ingresalos.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enviar">Enviar</string>
    <string name="escribe_tu_comentario">Escribe tu comentario</string>
    <string name="guardar">Guardar</string>
    <string name="ya_estuve_aqu">Ya estuve aquí</string>
    <string name="rese_as">Reseñas</string>
    <string name="ver_menu">Ver menu</string>
    <string name="ver_mapa">Ver mapa</string>

    <string name="nav_home">Inicio</string>
    <string name="nav_tipos">Tipos</string>
    <string name="nav_platos">Platos</string>
    <string name="nav_guardar">Guardados</string>
    <string name="nav_estuve">Ya Estuve</string>
    <string name="nav_logout">Cerrar sesion</string>
    <string name="nav_perfil">Perfil</string>

    <string name="open_menu">Menu abierto</string>
    <string name="close_menu">Menu cerrado</string>
    <string name="ingredientes">Ingredientes</string>
    <string name="bueno">Haz guardado el restaurante</string>
    <string name="malo">No se pudo realizar esta accion</string>
    <string name="guardarbien">El restaurante ha sido guardado con exito</string>
    <string name="guardarmal">Error al guardar el restaurante</string>
    <string name="guardarerror">Error con el servidor</string>
    <string name="erorrrr">Error en el servidor</string>
</resources>
