<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>
        <variable
            name="user"
            type="com.isaaristi.enjoyeating.modelos.Users"/>

        <variable
            name="handler"
            type="com.isaaristi.enjoyeating.RegisterActivity"/>
    </data>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.isaaristi.enjoyeating.RegisterActivity"
        android:background="@color/fondo"
        android:paddingTop="40dp"
        android:stretchColumns="*">

        <ImageView
            android:id="@+id/img"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_gravity="center"
            android:src="@drawable/salad" />

        <LinearLayout
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30dp"
                android:text="@string/enjoy_eating"
                android:layout_gravity="center"
                android:textColor="@color/colorPrimary"
                android:fontFamily="sans-serif" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Registrarse"
                android:textSize="20dp"
                android:layout_gravity="center"
                android:textColor="@color/colorPrimary" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/username"
                android:textColorHint="@color/rojo">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/nombre_de_usuario"
                    android:text="@{user.username}"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/correo"
                android:textColorHint="@color/rojo">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/correo"
                    android:text="@{user.correo}"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/password"
                android:textColorHint="@color/rojo">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/contrase_a"
                    android:text="@{user.password}"
                    />

            </android.support.design.widget.TextInputLayout>


        </LinearLayout>


        <TableRow>

            <Button
                android:id="@+id/registro"
                android:text="@string/registro"
                android:background="@color/rojo"
                android:textColor="@color/colorAccent"
                android:onClick="@{() -> handler.principal()}"
                />

        </TableRow>
    </TableLayout>
</layout>

